--- a/app/views/file_uploads/new.html.erb
+++ b/app/views/file_uploads/new.html.erb
@@ -1,9 +1,7 @@
-<h1>Upload New File</h1>
-
 <%= form_with(model: @file_upload, local: true) do |form| %>
   <% if @file_upload.errors.any? %>
-    <div>
-      <h2><%= pluralize(@file_upload.errors.count, "error") %> prohibited this file from being saved:</h2>
+    <div id="error_explanation">
+      <h2><%= pluralize(@file_upload.errors.count, "error") %> prohibited this file upload from being saved:</h2>
       <ul>
         <% @file_upload.errors.full_messages.each do |message| %>
           <li><%= message %></li>
@@ -28,6 +26,6 @@
   </div>
 
   <div>
-    <%= form.submit 'Upload File' %>
+    <%= form.submit "Upload File" %>
   </div>
 <% end %>
