--- a/app/views/file_uploads/index.html.erb
+++ b/app/views/file_uploads/index.html.erb
@@ -1,14 +1,24 @@
-<h1>Your Uploaded Files</h1>
+<h1 class="text-center my-5">Your Uploaded Files</h1>
 
-<ul>
-  <% @file_uploads.each do |file_upload| %>
-    <li>
-      <strong><%= file_upload.title %></strong>
-      <p><%= file_upload.description %></p>
-      <%= link_to 'Delete', file_upload_path(file_upload), method: :delete, data: { confirm: 'Are you sure?' } %>
-    </li>
-  <% end %>
-</ul>
+<div class="container">
+  <div class="row justify-content-center">
+    <div class="col-lg-8 col-md-10 col-sm-12">
+      <% @file_uploads.each do |file_upload| %>
+        <div class="card mb-4 shadow-sm">
+          <div class="card-body">
+            <h5 class="card-title text-center"><%= file_upload.title %></h5>
+            <p class="card-text"><%= file_upload.description %></p>
+            <a class="card-text" href="<%=file_upload.file_url || " NA "%>">VIEW</p>
+            <div class="text-center">
+              <%= link_to 'Delete', file_upload_path(file_upload), method: :delete, class: 'btn btn-danger', data: { confirm: 'Are you sure?' } %>
+            </div>
+          </div>
+        </div>
+      <% end %>
 
-<%= link_to 'Upload New File', new_file_upload_path %>
-
+      <div class="text-center mt-4">
+        <%= link_to 'Upload New File', new_file_upload_path, class: 'btn btn-primary' %>
+      </div>
+    </div>
+  </div>
+</div>
