--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,11 +4,22 @@
   <%= csp_meta_tag %>
 
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css">
-
+  <style>
+    .logout-btn {
+      position: absolute;
+      top: 10px;
+      right: 10px;
+    }
+  </style>
 </head>
 
 <body>
   <%= yield %>
+  <% if user_signed_in? %>
+      <div class="logout-btn">
+        <%= button_to 'Logout', destroy_user_session_path, method: :delete, class: 'btn btn-danger' %>
+      </div>
+    <% end %>
 
   <!-- Include Bootstrap JS without integrity attribute -->
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
